# lfm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  loc.yml
benches/: bench_chat_template.rs  bench_preproc.rs  bench_tile_grid.rs
docs/: codex-review-rejections.md
docs/superpowers/plans/: 2026-05-03-lfm-vlm-wrapper.md
docs/superpowers/specs/: 2026-05-03-lfm-vlm-wrapper-design.md
examples/: preprocess_only.rs  scene_analysis.rs  smoke.rs
models/: config.json  preprocessor_config.json  processor_config.json  tokenizer_config.json
scripts/: README.md  capture_onnx_io.py  derive_target_ratios.py  derive_tile_grid_fixtures.py  verify_multi_image_ordering.py
src/: bundled.rs  chat_template.rs  engine.rs  error.rs  generate.rs  image_analysis.rs  lib.rs  options.rs  task.rs
src/preproc/: mod.rs  target_ratios.rs  tile_grid.rs
src/runtime/: decoder.rs  embed_tokens.rs  mod.rs  sampler.rs  session.rs  vision.rs
tests/: integration.rs
tests/fixtures/: chat_template_cases.json  image_expansion_cases.json  multi_image_ordering_proof.json  onnx_io_contract.json
